--- a/src/main/resources/testee/it/reportng/templates/html/reportng.css
+++ b/src/main/resources/testee/it/reportng/templates/html/reportng.css
@@ -77,11 +77,10 @@ div.test                 {margin-top: 0.1em; clear: right; font-size: 1.3em;}
 .overviewTable .number   {width: 5em;}
 
 /* modal screenshot */
-.screenshot              {cursor: pointer;}
-.screenshot:hover        {opacity: 0.5; border-color: red; border-style: dashed;}
+.screenshot              {cursor: pointer; border-style: solid; border-color: floralwhite;}
+.screenshot:hover        {opacity: 0.7; border-color: red;}
 .modal                   {display: none; position: fixed; z-index: 1; padding-top: 100px; left: 0;top: 0;width: 100%; height: 100%; overflow: auto; background-color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0.9); }
-.modal-content           {margin: auto; display: block; width: 80%; max-width: 700px;}
-#caption                 {margin: auto; display: block; width: 80%; max-width: 700px; text-align: center; color: #ccc; padding: 10px 0; height: 150px;}
+.modal-content           {margin: auto; display: block; width: 90%;}
 .close                   {position: absolute; top: 15px; right: 35px; color: #f1f1f1; font-size: 40px; font-weight: bold; transition: 0.3s}
 .close:hover,
 .close:focus             {color: #bbb; text-decoration: none; cursor: pointer;}
