--- a/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
@@ -5,7 +5,7 @@
 
 #foreach ($testResult in $classResults)
 <tr>
-  <td class="method">
+  <td class="method #if ($testResult.status == 1)pass#end">
     #set ($testInstanceName = "")
     #if ($testResult.testName)
       #set ($testInstanceName = " ($testResult.testName)")
@@ -25,7 +25,7 @@
       #if( $utils.hasDependentGroups($testResult) )
         <i>$messages.getString("dependsOnGroups"): </i>
         <span class="dependency">$utils.getDependentGroups($testResult)</span>
-        <br />
+        <br/>
       #end
       #if ($utils.hasDependentMethods($testResult))
         <i>$messages.getString("dependsOnMethods"): </i>
@@ -38,7 +38,7 @@
     #end
 
     #if ($utils.hasArguments($testResult))
-      <i>$messages.getString("methodArguments"): </i><span class="arguments">$utils.getArguments($testResult)</span><br />
+      <i>$messages.getString("methodArguments"): </i><span class="arguments">$utils.getArguments($testResult)</span><br/>
     #end
 
     ## Show logger output for the test.
@@ -47,7 +47,7 @@
     <div class="testOutput">
       #foreach( $line in $output )
         #if ($meta.shouldEscapeOutput())
-          $utils.escapeHTMLString($line)<br />
+          $utils.escapeHTMLString($line)<br/>
         #else
           $line
         #end
@@ -57,18 +57,18 @@
 
 
     #if ($testResult.throwable && ( $testResult.status == 2 || $meta.shouldShowExpectedExceptions()))
-    <a href="javascript:toggleElement('exception-$id', 'block')" title="$messages.getString("clickToExpandCollapse")"><b>$utils.escapeHTMLString( $testResult.throwable.toString() )</b></a><br />
+    <a href="javascript:toggleElement('exception-$id', 'block')" title="$messages.getString("clickToExpandCollapse")"><b>$utils.escapeHTMLString( $testResult.throwable.toString() )</b></a><br/>
     <div class="stackTrace" id="exception-$id">
       #foreach ($element in $testResult.throwable.stackTrace)
-        $utils.escapeHTMLString( $element.toString() )<br />
+        $utils.escapeHTMLString( $element.toString() )<br/>
       #end
       #set ($causes = $utils.getCauses($testResult.throwable))
       #foreach ($throwable in $causes)
         #set ($id = $id + 1)
-        <b>$messages.getString("causedBy"): </b> <a href="javascript:toggleElement('exception-$id', 'block')" title="Click to expand/collapse">$utils.escapeHTMLString( $throwable.toString() )</a><br />
+        <b>$messages.getString("causedBy"): </b> <a href="javascript:toggleElement('exception-$id', 'block')" title="Click to expand/collapse">$utils.escapeHTMLString( $throwable.toString() )</a><br/>
         <div class="stackTrace" id="exception-$id">
           #foreach ($element in $throwable.stackTrace)
-            $utils.escapeHTMLString($element.toString())<br />
+            $utils.escapeHTMLString($element.toString())<br/>
           #end
         </div>
       #end
