Changes in version 1.4.1 ------------------------ * HTMLReporterRuntime and HTMLReporter * Zipped snapshot with test results

--- a/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
@@ -17,7 +17,7 @@
     #end
   </td>
   <td class="duration">
-    $utils.formatDuration($testResult.startMillis, $testResult.endMillis)s
+    $utils.formatDuration($testResult.startMillis, $testResult.endMillis)
   </td>
   <td class="result">
     ## Display the dependencies for skipped test methods.
