--- a/src/main/resources/testee/it/reportng/templates/html/overview.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/overview.html.vm
@@ -62,11 +62,8 @@
   #set ($totalFailed = 0)
   <tr class="columnHeadings">
     <th>
-      #if (!$utils.hasGroups($suite))
-        ${suite.name}
-      #end
       #if ($utils.hasGroups($suite))
-        <a href="suite${suiteId}_groups.html">${suite.name}</a>
+        <a href="suite${suiteId}_groups.html">$messages.getString("groups")</a>
       #end
     </th>
     <th>$messages.getString("duration")</th>
