--- a/src/main/resources/testee/it/reportng/templates/html/reportng.css
+++ b/src/main/resources/testee/it/reportng/templates/html/reportng.css
@@ -84,6 +84,7 @@ div.test                 {margin-top: 0.1em; clear: right; font-size: 1.3em;}
 .overviewTable .number   {width: 5em;}
 
 /* modal screenshot */
+.pointer                 {cursor: pointer;}
 .screenshot              {cursor: pointer; border-style: dashed; border-color: white;}
 .screenshot:hover        {opacity: 0.7; border-color: red;}
 .modal                   {display: none; position: fixed; z-index: 1; padding-top: 100px; left: 0;top: 0;width: 100%; height: 100%; overflow: auto; background-color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0.9); }
