--- a/src/main/resources/testee/it/reportng/templates/html/suites.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/suites.html.vm
@@ -49,8 +49,8 @@
       #set ($onlyFailed = $result.testContext.failedTests.size()>0 && $result.testContext.passedTests.size() ==0 &&  $result.testContext.skippedTests.size() ==0)
 
       #if (($onlyReportFailures && $failuresExist) || (!$onlyReportFailures))
-        <tr>
-          <td class="test only-#if($onlyPassed)passed#end#if($onlySkipped)skipped#end#if($onlyFailed)failed#end">
+        <tr class="#if($onlyPassed)only-passed#end#if($onlySkipped)only-skipped#end#if($onlyFailed)only-failed#end">
+          <td class="test">
             #if ($result.testContext.failedTests.size() > 0)
             <span class="failureIndicator" title="$messages.getString("failed.tooltip")">&#x2718;</span>
             #else
