Changes in version 1.6.0 ------------------------ * added reveal.js for slide presentation inside the test results

--- a/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
@@ -75,18 +75,21 @@
     </div>
     #end
     #set ($id = $id + 1)
-    ## Show screenshot output for the test.
-        #set ($screenshots = $utils.getScreenshots($testResult))
-        #if ($screenshots.size() > 0)
-            <div class="screenshots">
-                ##<i>Screenshots:</i><br/>
-                #foreach( $screenshot in $screenshots )
-                    ##<!--<a href="file:///$screenshot">$screenshot</a><br/>-->
-                    ##<a href="$screenshot">$screenshot</a><br/>
-                   <img id="screenshot-$id" class="screenshot" src="data:image/png;base64,$screenshot" onclick="modalImage($id)" width="50%" height="50%" alt="$id"><br/>
-                #end
-            </div>
-        #end
+      ## Show screenshot output for the test.
+      #set ($screenshots = $utils.getScreenshots($testResult))
+      #if ($screenshots.size() > 0)
+          <div class="screenshots">
+              <img id="screenshot-$id" class="screenshot" src="data:image/png;base64,$screenshots.get(0)"
+                   onclick="modalImage($id)" width="50%" height="50%" alt="$id"/>
+          </div>
+      #end
+      ## Show screenshots as a slides for the test in reveal.js
+      <div id="modal-$id" class="modal" onclick="modalClose($id)">
+          ##<span class="close" onclick="modalClose($id)">&times;</span>
+          <div class="reveal deck$id">
+              #parse ("testee/it/reportng/templates/html/reveal.html.vm")
+          </div>
+      </div>
   </td>
 </tr>
 #end
