--- a/src/main/resources/testee/it/reportng/templates/html/reveal.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/reveal.html.vm
@@ -7,7 +7,7 @@
             <p class="close" onclick="modalClose()">$testResult.name</p>
             <table>
                 <tr>
-                    <td style="text-align: left; font-size: smaller">
+                    <td style="text-align: left; font-size: small;">
                         #foreach($fragment in $fragments.entrySet())
                             #if ($utils.screenshotHasFragment($screenshot, $fragment.key))
                                 <a style="color: red" href="#/$fragment.value">$fragment.key</a><br>
