--- a/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
+++ b/src/main/resources/testee/it/reportng/templates/html/class-results.html.vm
@@ -5,15 +5,32 @@
 
 #foreach ($testResult in $classResults)
 <tr>
-  <td class="method">
+  <td class="method #if($testResult.status == 1)pass#end">
     #set ($testInstanceName = "")
     #if ($testResult.testName)
       #set ($testInstanceName = " ($testResult.testName)")
     #end
-    #if ($testResult.method.description && $testResult.method.description.length() > 0)
-      <span class="description" title="$testResult.method.description">$testResult.name$testInstanceName</span>
+    ## Logger output for the test.
+    #set ($output = $utils.getTestOutput($testResult))
+    #if ($output.size() > 0)
+      <a class="description" href="javascript:toggleElement('description-$id', 'block')"
+         title="#if($testResult.method.description && $testResult.method.description.length() > 0)$testResult.method.description#else$messages.getString("clickToExpandCollapse")#end">
+        $testResult.name$testInstanceName</a><br/>
+      <div class="testOutput" id="description-$id">
+        #foreach( $line in $output )
+          #if ($meta.shouldEscapeOutput())
+            $utils.escapeHTMLString($line)<br/>
+          #else
+            $line
+          #end
+        #end
+        </div>
     #else
+      #if ($testResult.method.description && $testResult.method.description.length() > 0)
+        <span class="description" title="$testResult.method.description">$testResult.name$testInstanceName</span>
+      #else
       $testResult.name$testInstanceName
+      #end
     #end
   </td>
   <td class="duration">
@@ -39,20 +56,6 @@
 
     #if ($utils.hasArguments($testResult))
       <i>$messages.getString("methodArguments"): </i><span class="arguments">$utils.getArguments($testResult)</span><br/>
-    #end
-
-    ## Show logger output for the test.
-    #set ($output = $utils.getTestOutput($testResult))
-    #if ($output.size() > 0)
-    <div class="testOutput">
-      #foreach( $line in $output )
-        #if ($meta.shouldEscapeOutput())
-          $utils.escapeHTMLString($line)<br/>
-        #else
-          $line
-        #end
-      #end
-    </div>
     #end
 
 
